fix(landing): horiz scrollbar on mobile

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -38,6 +38,7 @@
 
 .header {
   color: white;
+  overflow: hidden;
 }
 
 .header__languages {
